--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,8 @@
     background-color: var(--primary-color) ;
     color: #ffffff;
 }
+
+.caixa{
+  padding: 60px 0;
+  border-bottom: 1px solid #e5e5e5;
+}
