--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,13 @@
   padding: 60px 0;
   border-bottom: 1px solid #e5e5e5;
 }
+
+.pagHome-footer p a{
+  font-weight: 200;
+  margin: 5px 15px;
+  color: black;
+  text-decoration: none;
+
+}.pagHome-footer p a:hover{
+  font-weight: 300;
+}
