--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,13 @@
 
 :root {
     --primary-color: #ffc107;
-    
+    --white-color: #ffffff;
   }
   
 
 #home{
     background-color: var(--primary-color) ;
-    color: #ffffff;
+    color: var(--white-color);
 }
 
 .caixa{
@@ -24,4 +24,108 @@
 
 }.pagHome-footer p a:hover{
   font-weight: 300;
+}
+
+.global{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+  
+#section-box{
+  background-color: #ffc107;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.container-register{
+  background-color:var(--white-color);
+  border-radius: 30px;
+  box-shadow: 0 5px 15px rgba(0, 0 ,0, 0.40);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+.container-register p{
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  margin: 20px 0;
+}
+.container-register span{
+  font-size: 12px;
+}
+.container-register a{
+  color: #333;
+  font-size: 13px;
+  text-decoration: none;
+  margin: 15px 0 10px;
+}
+.container-register button{
+  background-color:var(--primary-color);
+  font-size: 12px;
+  padding: 10px 45px;
+  border: 1px solid transparent;
+  font-weight: 600px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  cursor: pointer
+
+}
+.container-register button.hidden{
+  background-color: transparent;
+  border-color: var(--white-color);
+}
+.container-register form{
+  background-color:var(--white-color) ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  height: 100%;
+}
+.container-register input{
+  background-color: #eee;
+  border: none;
+  margin: 8px 0;
+  padding: 10px 15px;
+  font-size: 13px;
+  border-radius: 8px;
+  width: 100%;
+  outline: none;
+}
+.form-container{
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+
+}
+.sign-in{
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+.container-register.active .sign-in{
+  transform: translateX(100%);
+}
+
+.sign-up{
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+.container-register.active .sign-un{
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: move 0.6;
 }
