--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,13 +30,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #ffc107;
+
+}
   
 #section-box{
-  background-color: #ffc107;
+  margin-top: 100px;
   display: flex;
   align-items: center;
-  justify-items: center;
   flex-direction: column;
   height: 100vh;
 }
