--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,16 +34,9 @@
   background-color: #ffc107;
 
 }
-  
-#section-box{
-  margin-top: 100px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-}
 
 .container-register{
+  margin-top: 100px;
   background-color:var(--white-color);
   border-radius: 30px;
   box-shadow: 0 5px 15px rgba(0, 0 ,0, 0.40);
@@ -69,6 +62,7 @@
   margin: 15px 0 10px;
 }
 .container-register button{
+  border-radius: 10px;
   background-color:var(--primary-color);
   font-size: 12px;
   padding: 10px 45px;
@@ -103,6 +97,15 @@
   width: 100%;
   outline: none;
 }
+.request-a{
+  font-size: 12px;
+}
+.request-a:hover{
+  color: #000000;
+  font-size: 14px;
+
+}
+
 .form-container{
   position: absolute;
   top: 0;
@@ -130,4 +133,74 @@
   opacity: 1;
   z-index: 5;
   animation: move 0.6;
+}
+
+.container-request{
+  margin-top: 100px;
+  background-color:var(--white-color);
+  border-radius: 30px;
+  box-shadow: 0 5px 15px rgba(0, 0 ,0, 0.40);
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+}
+.container-request p{
+  font-size: 16px;
+  line-height: 25px;
+  letter-spacing: 0.3px;
+  margin: 20px 0;
+}
+.container-request span{
+  padding: 10px;
+  font-size: 1rem;
+}
+.container-request a{
+  color: #333;
+  font-size: 13px;
+  text-decoration: none;
+  margin: 15px 0 10px;
+}
+.container-request a{
+  border-radius: 10px;
+  background-color:var(--primary-color);
+  font-size: 10px;
+  padding: 10px 45px;
+  border: 1px solid transparent;
+  font-weight: 600px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  cursor: pointer
+
+}
+.container-request button.hidden{
+  background-color: transparent;
+  border-color: var(--white-color);
+}
+.container-request form{
+  background-color:var(--white-color) ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+}
+.container-request input{
+  background-color: #eee;
+  border: none;
+  margin: 8px 0;
+  padding: 10px 15px;
+  font-size: 13px;
+  border-radius: 8px;
+  width: 100%;
+  outline: none;
+}
+.container-request a.hidden{
+  color: #000000;
+  font-weight: 500;
+}
+.container-request a:hover{
+  color: #000000;
+  font-weight: 600;
 }
