--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 :root {
     --primary-color: #ffc107;
     --white-color: #ffffff;
+    --gray-color: #8b8b8b;
   }
   
 
@@ -26,20 +27,12 @@
   font-weight: 300;
 }
 
-.global{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #ffc107;
-
-}
 
 .container-register{
   margin-top: 100px;
   background-color:var(--white-color);
   border-radius: 30px;
-  box-shadow: 0 5px 15px rgba(0, 0 ,0, 0.40);
+  box-shadow: 0 5px 15px rgba(0, 0 ,0, 0.35);
   position: relative;
   overflow: hidden;
   width: 768px;
@@ -62,18 +55,35 @@
   margin: 15px 0 10px;
 }
 .container-register button{
+  color:var(--white-color) ;
   border-radius: 10px;
-  background-color:var(--primary-color);
+  background-color:var(--gray-color);
   font-size: 12px;
   padding: 10px 45px;
   border: 1px solid transparent;
-  font-weight: 600px;
+  font-weight: 600;
   letter-spacing: 0.5px;
   text-transform: uppercase;
   margin-top: 10px;
-  cursor: pointer
+  cursor: pointer;
 
 }
+.container-register button:hover{
+  color: var(--gray-color);
+  border-radius: 10px;
+  background-color:var(--white-color);
+  font-size: 12px;
+  padding: 10px 45px;
+  border: 1px solid ;
+  border-color:var((--gray-color));
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  cursor: pointer;
+
+}
+
 .container-register button.hidden{
   background-color: transparent;
   border-color: var(--white-color);
@@ -134,6 +144,156 @@
   z-index: 5;
   animation: move 0.6;
 }
+@keyframes move{
+  0%, 49.99%{
+    opacity: 0;
+    z-index: 1;
+  }
+  50%, 100%{
+  opacity: 1;
+  z-index: 5;
+}
+}
+
+.social-icons{
+  margin: 20px 0;
+}
+
+.social-icons a{
+  border: 2px solid #1b1b1b;
+  border-radius: 20%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 3px;
+  width: 40px;
+  height: 40px;
+}
+
+.toggle-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: all 0.6s ease-in-out;
+  border-radius: 150px 0 0 100px;
+  z-index: 1000;
+}
+
+.container-register.active .toggle-container{
+  transform: translateX(-100%);
+  border-radius: 0 150px 100px 0;
+}
+.toggle {
+  
+  font-weight: 600;
+  background-color: #0e0d0d;
+  height: 100%;
+  background: linear-gradient(to right, #ffffff,#fffb00);
+  color: var(--white-color);
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: all 0.6s ease-in-out;
+}
+.container-register.active .toggle{
+  transform: translateX(50%);
+}
+
+.toggle-panel{
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 30px;
+  text-align: center;
+  top: 0;
+  transform: translateX(0);
+  transition: all 0.6s ease-in-out;
+
+}
+
+
+.toggle-left{
+  transform: translateX(-200%);
+}
+#login{
+  color: #000000;
+  font-weight: 800;
+  border: 2px solid rgb(0, 0, 0, 0.9)
+  
+}
+
+#login:hover {
+  background-color: #3f3f3fc4;
+  color: #ffffff;
+  font-weight: 800;
+  border: 1px solid #3f3f3fc4;
+  transition: all 0.3s ease-in-out;
+
+}
+
+#login:focus{
+  outline: none;
+
+}
+
+
+.container-register.active .toggle-left{
+  transform: translateX(0);
+  color: #000000;
+  background-color: #3f3f3fc4;
+  color: #ffffff;
+  font-weight: 800;
+  border: 1px solid #3f3f3fc4;
+  transition: all 0.3s ease-in-out;
+}
+
+.toggle-right{
+  
+  color: #000000;
+  right: 0;
+  transform: translateX(0);
+}
+
+#register{
+  color: #000000;
+  font-weight: 800;
+  border: 2px solid rgb(0, 0, 0, 0.9)
+  
+}
+
+#register:hover {
+  background-color: #3f3f3fc4;
+  color: #ffffff;
+  font-weight: 800;
+  border: 1px solid #3f3f3fc4;
+  transition: all 0.3s ease-in-out;
+
+}
+
+#register:focus{
+  outline: none;
+
+}
+
+.container-register.active .toggle-right{
+  transform: translateX(200%);
+  
+}
+
+
+
+
+
+
 
 .container-request{
   margin-top: 100px;
@@ -142,7 +302,7 @@
   box-shadow: 0 5px 15px rgba(0, 0 ,0, 0.40);
   position: relative;
   overflow: hidden;
-  padding: 20px;
+
 }
 .container-request p{
   font-size: 16px;
