--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,7 +233,7 @@
   font-weight: 600;
   background-color: #0e0d0d;
   height: 100%;
-  background: linear-gradient(to right, #ffffff,#fffb00);
+  background: linear-gradient(to right, #ffffff,var(--primary-color));
   color: var(--white-color);
   position: relative;
   left: -100%;
@@ -397,6 +397,7 @@
 .container-request h2{
   background-color: var(--white-color);
   text-align: center;
+  box-shadow: (10, 10 , 1.02, #000000);
 }
 .container-request button.hidden{
   background-color: transparent;
@@ -418,8 +419,9 @@
   padding: 10px 15px;
   font-size: 13px;
   border-radius: 8px;
-  width: 100%;
+  width: 80%;
   outline: none;
+  
 }
 .container-request input:focus{
   box-shadow: #000000 0.2px 0.2px 10px  ;
@@ -431,6 +433,15 @@
 .container-request a:hover{
   color: #000000;
   font-weight: 600;
+}
+
+.container-request img{
+  background-color: #ffc107;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 0;
+  box-shadow: (10, 10 , 1.02, #000000);
+
 }
 
 
